LPS-34940 - Fix alignment issue on Firefox and IE < 10

--- a/portal-web/docroot/html/portlet/asset_tag_admin/css/main.css
+++ b/portal-web/docroot/html/portlet/asset_tag_admin/css/main.css
@@ -73,15 +73,18 @@
 	}
 
 	.tag-item-check {
-		float: left;
 		margin-right: 10px;
-		margin-top: 2px;
+		margin-top: 0;
 		position: static;
 	}
 
 	.tags-admin-content {
 		.tag-item-container {
 			position: relative;
+
+			.tag-item-name {
+				margin-top: 2px;
+			}
 		}
 
 		li.tag-item-container, li.tag-item {
